--- a/index.html
+++ b/index.html
@@ -53,10 +53,17 @@ a:hover {
 
     <img class="header" src="logoMegaWide.png" autofocus>
         <hr color="">
-    <p style="width:600px;" text-align="center"><a href="https://fin-deevy.itch.io/">itch.io</a> | <a href="https://store.steampowered.com/search/?developer=Fin%20Deevy">steam</a> | <a href="https://twitter.com/FinDeevy">newgrounds</a> | <a href="https://twitter.com/FinDeevy">twitter</a> | <a href="https://www.youtube.com/channel/UCitqbXDWjWryhyeP3kVftXw">youtube</a> | <a href="mailto:findeevy@gmail.com">email</a></p>
+
+    <p style="width:600px;" text-align="center"><a href="https://fin-deevy.itch.io/">itch.io</a> | <a href="https://store.steampowered.com/search/?developer=Fin%20Deevy">steam</a> | <a href="https://pizzapranks.com/product/coda-by-fin-deevy/">webstore</a> | <a href="https://twitter.com/FinDeevy">newgrounds</a> | <a href="https://twitter.com/FinDeevy">twitter</a> | <a href="https://www.youtube.com/channel/UCitqbXDWjWryhyeP3kVftXw">youtube</a> | <a href="mailto:findeevy@gmail.com">email</a></p>
+
+<hr color="">
+<p style="width:600px;" text-align="center">coda is now available physically, published through indiepocalypse. get your own copy on <a href="https://pizzapranks.com/product/coda-by-fin-deevy/">their website</a>... (january 11th, 2024)</p>
+
+<img src="phys.png" style="width:600px; border-style: solid;" align="center">
+<br>
 
     <hr color="">
-    <p style="width:600px;" text-align="center">some <a href="somenews.html">news</a> and a relic from ///CODA's making... (january 3rd, 2024)</p>
+    <p style="width:600px;" text-align="center">some <a href="somenews.html">news</a> and a relic from coda's making... (january 3rd, 2024)</p>
 
     <img src="sl2.png" style="width:600px; border-style: solid;" align="center">
     <br>
