--- a/alephpresskit.html
+++ b/alephpresskit.html
@@ -41,7 +41,7 @@ a:hover {
   <hr color="">
 <div align="Left">
 <p style="width:600px;" text-align="Left"><b>Developer: Fin Deevy</b></p>
-<p style="width:600px;" text-align="Left">Release Date: May 17th, 2024</p>
+<p style="width:600px;" text-align="Left">Release Date: September, 2024</p>
 <p style="width:600px;" text-align="Left">Platform: Windows</p>
 <p style="width:600px;" text-align="Left">Regular Price: $8.59 USD</p>
 </div>
@@ -83,7 +83,7 @@ a:hover {
 <hr color="">
 
 <div align="center">
-<p style="width:600px;" text-align="center">fin deevy &#169;2023</p>
+<p style="width:600px;" text-align="center">fin deevy &#169;2024</p>
 </div>
 <br>
 </div>
