--- a/somenews.html
+++ b/somenews.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html><head><meta  content="text/html; charset=UTF-8"><title>Some News</title>
+<html><head><meta  content="text/html; charset=UTF-8"><title>some news</title>
 
   <link rel="icon" href="favicon2.ico" type="image/x-icon">
 <link rel="shortcut icon" href="favicon2.ico" type="image/x-icon"><link rel="preconnect" href="https://fonts.googleapis.com/">
