--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ a:hover {
         <p style="width:600px;" text-align="center"><a href="https://fin-deevy.itch.io/">itch.io</a> | <a href="https://store.steampowered.com/search/?developer=Fin%20Deevy">steam</a> | <a href="https://pizzapranks.com/product/coda-by-fin-deevy/">webstore</a> | <a href="https://twitter.com/FinDeevy">newgrounds</a> | <a href="https://twitter.com/FinDeevy">twitter</a> | <a href="https://www.youtube.com/channel/UCitqbXDWjWryhyeP3kVftXw">youtube</a> | <a href="mailto:findeevy@gmail.com">email</a></p>
 
     <hr color="">
-    <p style="width:600px;" text-align="center"><a href="prosper1.html">prosper</a> 1, inedible food for thought... (march 18th, 2024)</p>
+    <p style="width:600px;" text-align="center"><a href="prosper1.html">prosper 1</a>, inedible food for thought... (march 18th, 2024)</p>
 
     <img src="SSN12.png" style="width:600px; border-style: solid;" align="center">
     <br>
