--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
         <hr color="">
         <p style="width:600px;" text-align="center"><a href="https://fin-deevy.itch.io/">itch.io</a> | <a href="https://store.steampowered.com/search/?developer=Fin%20Deevy">steam</a> | <a href="https://pizzapranks.com/product/coda-by-fin-deevy/">webstore</a> | <a href="https://twitter.com/FinDeevy">newgrounds</a> | <a href="https://twitter.com/FinDeevy">twitter</a> | <a href="https://www.youtube.com/channel/UCitqbXDWjWryhyeP3kVftXw">youtube</a> | <a href="mailto:findeevy@gmail.com">email</a></p>
         <hr color="">
+        <p style="width:600px;" text-align="center">aleph prologue three has emerged. (march 24th, 2024)</p>
+        <iframe width="600" height="315" src="https://www.youtube.com/watch?v=dr3FNeuMYnM" title="YouTube video player" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <br>
+        <br>
+        <hr color="">
         <p style="width:600px;" text-align="center"><a href="https://store.steampowered.com/app/2665180/ALEPH/">aleph</a> coming august <s>16th</s> 14th, 2024... (march 21st, 2024)</p>
         <img src="SSN11.png" style="width:600px; border-style: solid;" align="center">
         <br>
