--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <hr color="">
         <p style="width:600px;" text-align="center"><a href="https://fin-deevy.itch.io/">itch.io</a> | <a href="https://store.steampowered.com/search/?developer=Fin%20Deevy">steam</a> | <a href="https://pizzapranks.com/product/coda-by-fin-deevy/">webstore</a> | <a href="https://twitter.com/FinDeevy">newgrounds</a> | <a href="https://twitter.com/FinDeevy">twitter</a> | <a href="https://www.youtube.com/channel/UCitqbXDWjWryhyeP3kVftXw">youtube</a> | <a href="mailto:findeevy@gmail.com">email</a></p>
         <hr color="">
-        <p style="width:600px;" text-align="center">burning the midnight oil (march 30th, 2024)</p>
+        <p style="width:600px;" text-align="center">burning the midnight <a href="https://youtu.be/wDS-63S5no8">oil</a> (march 30th, 2024)</p>
         <img src="face.png" style="width:600px; border-style: solid;" align="center">
         <br>
         <hr color="">
