--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
         <hr color="">
         <p style="width:600px;" text-align="center"><a href="https://fin-deevy.itch.io/">itch.io</a> | <a href="https://store.steampowered.com/search/?developer=Fin%20Deevy">steam</a> | <a href="https://pizzapranks.com/product/coda-by-fin-deevy/">webstore</a> | <a href="https://fin-deevy.newgrounds.com/">newgrounds</a> | <a href="https://twitter.com/FinDeevy">twitter</a> | <a href="https://www.youtube.com/channel/UCitqbXDWjWryhyeP3kVftXw">youtube</a> | <a href="mailto:findeevy@gmail.com">email</a></p>
         <hr color="">
+        <p style="width:600px;" text-align="center">i never left. (august 4th, 2024)</p>
+        <img src="ccaps.png" style="width:600px; border-style: solid;" align="center">
+        <hr color="">
         <p style="width:600px;" text-align="center">aleph nears her destiny... (may 18th, 2024)</p>
         <img src="SSN13.png" style="width:600px; border-style: solid;" align="center">
         <hr color="">
