--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
         <hr color="">
         <p style="width:600px;" text-align="center"><a href="https://fin-deevy.itch.io/">itch.io</a> | <a href="https://store.steampowered.com/search/?developer=Fin%20Deevy">steam</a> | <a href="https://pizzapranks.com/product/coda-by-fin-deevy/">webstore</a> | <a href="https://fin-deevy.newgrounds.com/">newgrounds</a> | <a href="https://twitter.com/FinDeevy">twitter</a> | <a href="https://www.youtube.com/channel/UCitqbXDWjWryhyeP3kVftXw">youtube</a> | <a href="mailto:findeevy@gmail.com">email</a></p>
         <hr color="">
+        <p style="width:600px;" text-align="center">aleph's has released... (august 14th, 2024)</p>
+        <iframe src="https://store.steampowered.com/widget/2665180/" frameborder="1" width="600" height="200"></iframe>
+        <p style="width:600px;" text-align="center">along side a bundle known as the "<a href="https://store.steampowered.com/bundle/44176/ASSEMBLAGE/">///ASSEMBLAGE</a>".</p>
+        <hr color="">
         <p style="width:600px;" text-align="center">aleph prologue four has emerged. (august 11th, 2024)</p>
         <iframe width="600" height="315" src="https://www.youtube.com/embed/UEEgOdUShCc?si=OkVwD2bP80KnvRAa" title="YouTube video player" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <br>
