--- a/links.html
+++ b/links.html
@@ -33,6 +33,12 @@
           <br>
           <br>
           <img class="header" src="images/line.png" autofocus>
+          <br>
+          <h1>physical copies of my games:</h1>
+          <a href="https://pizzapranks.com/product/coda-by-fin-deevy/">coda</a>
+          <br>
+          <br>
+          <img class="header" src="images/line.png" autofocus>
           <h1>cool programs for making art:</h1>
             <a href="https://godotengine.org/">godot</a>
             <a href="https://www.blender.org/">blender</a>
