--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="favicon2.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
   </head>
-  <body style="font-family: monospace, monospace;width:1000px;margin-left:auto ;margin-right:auto;margin:0 auto;background-color: #0e071b; color: #0e071b;" align="center">
+  <body align="center">
     <div class = "tow">
       <div align="center">
         <a href="index.html"><img class="header" src="images/banner.png" autofocus></a>
