--- a/links.html
+++ b/links.html
@@ -25,6 +25,7 @@
             <h1>my stuff:</h1>
             <a href="https://store.steampowered.com/curator/44741529">steam</a>
             <a href="https://fin-deevy.itch.io/">itch.io</a>
+            <a href="https://pizzapranks.com/product/coda-by-fin-deevy/">webstore</a>
             <a href="https://fin-deevy.newgrounds.com/">newgrounds</a>
             <a href="https://www.youtube.com/channel/UCitqbXDWjWryhyeP3kVftXw">youtube</a>
             <a href="https://x.com/FinDeevy">twitter</a>
@@ -33,14 +34,10 @@
           <br>
           <br>
           <img class="header" src="images/line.png" autofocus>
-          <br>
-          <h1>physical copies of my games:</h1>
-          <a href="https://pizzapranks.com/product/coda-by-fin-deevy/">coda</a>
-          <br>
-          <br>
-          <img class="header" src="images/line.png" autofocus>
           <h1>cool programs for making art:</h1>
             <a href="https://godotengine.org/">godot</a>
+            <a href="https://qodotplugin.github.io/">qodot</a>
+            <a href="https://github.com/TrenchBroom/TrenchBroom/releases">trenchbroom</a>
             <a href="https://www.blender.org/">blender</a>
             <a href="https://www.gimp.org/">gimp</a>
             <a href="https://www.aseprite.org/">aseprite</a>
