--- a/links.html
+++ b/links.html
@@ -25,12 +25,17 @@
             <h1>my stuff:</h1>
             <a href="https://store.steampowered.com/curator/44741529">steam</a>
             <a href="https://fin-deevy.itch.io/">itch.io</a>
-            <a href="https://pizzapranks.com/product/coda-by-fin-deevy/">webstore</a>
             <a href="https://fin-deevy.newgrounds.com/">newgrounds</a>
             <a href="https://www.youtube.com/channel/UCitqbXDWjWryhyeP3kVftXw">youtube</a>
             <a href="https://x.com/FinDeevy">twitter</a>
             <a href="https://www.backloggd.com/u/findeevy/">backloggd</a>
             <a href="mailto: findeevy@gmail.com">email</a>
+          <br>
+          <br>
+          <img class="header" src="images/line.png" autofocus>
+          <h1>physical copies of my games:</h1>
+            <a href="https://pizzapranks.com/product/aleph-by-fin-deevy/">aleph</a>
+            <a href="https://pizzapranks.com/product/coda-by-fin-deevy/">coda</a>
           <br>
           <br>
           <img class="header" src="images/line.png" autofocus>
