--- a/yappin.html
+++ b/yappin.html
@@ -21,15 +21,18 @@
           <a class="float" href="about.html"><img src="images/aboutButton.png" onmouseover="this.src='images/aboutButtonG.png';" onmouseout="this.src='images/aboutButton.png';"></a>
         </p>
             <img class="header" src="images/line.png" autofocus>
+            <h1>yappin'</h1>
+            <b><a href="essays/20240907.html">why i killed g.o.d (not in an internet self-help way though, that’s gross)</a></b>
+            <p>i began having delusions while looking at my used ebay-procured iphone 12 mini...</p>
           <br>
+          <b><a href="essays/20240907.html">why i killed g.o.d (not in an internet self-help way though, that’s gross)</a></b>
+          <p>i began having delusions while looking at my used ebay-procured iphone 12 mini...</p>
           <br>
-          <br>
-            <h1>sorry... i don't have anything here yet.</h1>
-          <br>
-          <br>
-          <br>
+        <br>
+        <br>
+        <br>
+        <br>
             <img class="header" src="images/shortLine.png" autofocus>
-          <br>
             <p style="width:600px;margin: 0 auto" text-align="center">fin deevy &#169;2024</p>
             <a href="https://en.wikipedia.org/wiki/Worm"><img class="worm "style="margin: 0 auto" src="images/worm.png" onmouseover="this.src='images/wormG.png';" onmouseout="this.src='images/worm.png';"></a>
     </div>
