--- a/essays/20240907.html
+++ b/essays/20240907.html
@@ -28,7 +28,7 @@
             i began having delusions while looking at my used ebay-procured
             iphone 12 mini. first, i <i>prefer </i><span style="font-style: normal">using
             a smaller smart phone because i do not have the pockets of an ogre
-            nor glasses glued to my face. </span><span style="font-style: normal">secondly
+            nor glasses glued to my face. </span><span style="font-style: normal">secondly,
             the reason i say </span><i>delusions </i><span style="font-style: normal">and
             not thoughts </span><span style="font-style: normal">is because i had
             gaslit myself into thinking they were delusions for three months
