--- a/essays/20240907.html
+++ b/essays/20240907.html
@@ -10,14 +10,14 @@
   <body style="font-family: monospace, monospace;width:1000px;margin-left:auto ;margin-right:auto;margin:0 auto;background-color: #0e071b; color: #0e071b;" align="center">
     <div class = "tow">
       <div align="center">
-        <a href="../index.html"><img class="header" src="../images/banner.png" autofocus></a>
+        <a href="index.html"><img class="header" src="../images/banner.png" autofocus></a>
         <img class="header" src="../images/line.png" autofocus>
         <p style="width:1000px; margin: 0 auto" text-align="center">
-          <a class="float" href="aNote.html"><img src="../images/aNoteButton.png" onmouseover="this.src='../images/aNoteButtonG.png';" onmouseout="this.src='../images/aNoteButton.png';"></a>
+          <a class="float" href="../aNote.html"><img src="../images/aNoteButton.png" onmouseover="this.src='../images/aNoteButtonG.png';" onmouseout="this.src='../images/aNoteButton.png';"></a>
           <a class="float" href="../links.html"><img src="../images/linksButton.png" onmouseover="this.src='../images/linksButtonG.png';" onmouseout="this.src='../images/linksButton.png';"></a>
-          <a class="float" href="../https://store.steampowered.com/curator/44741529/?appid=2420390"><img src="../images/gamesButton.png" onmouseover="this.src='../images/gamesButtonG.png';" onmouseout="this.src='../images/gamesButton.png';"></a>
+          <a class="float" href="https://store.steampowered.com/curator/44741529/?appid=2420390"><img src="../images/gamesButton.png" onmouseover="this.src='../images/gamesButtonG.png';" onmouseout="this.src='../images/gamesButton.png';"></a>
           <a class="float" href="../yappin.html"><img src="../images/yappinButton.png" onmouseover="this.src='../images/yappinButtonG.png';" onmouseout="this.src='../images/yappinButton.png';"></a>
-          <a class="float" href="../https://www.youtube.com/playlist?list=PLx_IRXLKhc3VUa3-MyhczCHN74-cyDLx_"><img src="../images/musicButton.png" onmouseover="this.src='../images/musicButtonG.png';" onmouseout="this.src='../images/musicButton.png';"></a>
+          <a class="float" href="https://www.youtube.com/playlist?list=PLx_IRXLKhc3VUa3-MyhczCHN74-cyDLx_"><img src="../images/musicButton.png" onmouseover="this.src='../images/musicButtonG.png';" onmouseout="this.src='../images/musicButton.png';"></a>
           <a class="float" href="../about.html"><img src="../images/aboutButton.png" onmouseover="this.src='../images/aboutButtonG.png';" onmouseout="this.src='../images/aboutButton.png';"></a>
         </p>
             <img class="header" src="../images/line.png" autofocus>
