--- a/yappin.html
+++ b/yappin.html
@@ -22,14 +22,16 @@
         </p>
             <img class="header" src="images/line.png" autofocus>
             <h1>yappin'</h1>
+            <b><a href="essays/20241017.html">"god's vegetal state"</a></b>
+            <p>i felt that i had been happy and that i was happy again...</p>
+          <br>
+          <br>
             <b><a href="essays/20240927.html">selling your soul used to be the easy route (120 pieces of paper on fire)</a></b>
             <p>as time goes on i’m convinced that meant to sacrifice myself into the open volcano pit...</p>
           <br>
           <br>
           <b><a href="essays/20240907.html">why i killed g.o.d (not in an internet self-help way though, that’s gross)</a></b>
           <p>i began having delusions while looking at my used ebay-procured iphone 12 mini...</p>
-        <br>
-        <br>
         <br>
         <br>
             <img class="header" src="images/shortLine.png" autofocus>
