Updated links lol.

--- a/links.html
+++ b/links.html
@@ -53,6 +53,9 @@
           <br>
           <img class="header" src="images/shortLine.png" autofocus>
           <h1>useful tech:</h1>
+	    <a href="https://www.gnu.org/software/grub/">gnugrub</a>
+	    <a href="https://archlinux.org/">archlinux</a>
+	    <a href="https://www.ghostbsd.org/">ghostbsd</a>
             <a href="https://duckduckgo.com/">duckduckgo</a>
             <a href="https://www.mozilla.org/en-US/firefox/new/">firefox</a>
             <a href="https://mullvad.net/en">mullvad</a>
