added some words

--- a/about.html
+++ b/about.html
@@ -22,13 +22,13 @@
         </p>
             <img class="header" src="images/line.png" autofocus>
           <br>
-            <h1>so who is this guy?</h1>
-            <p align="left" style="margin-left: 14px">my name is fin and i've been making indie games in some form or another for seven(ish) years! i'm<br>currently in university studying computer science. over the years i've delved into everything from<br>politics, to skateboarding, to not-eating-meat, to art, to game development. i don't plan on stopping!<br><br>thanks for stopping by my little corner of the internet!</p>
+            <h1>hi.</h1>
+            <p align="left" style="margin-left: 14px; margin-right: 120px">my name is fin and i've been making indie games in some form or another for seven(ish) years! i'm currently in university studying computer science. over the years i've delved into everything from politics, to skateboarding, to not eating meat, to art, to game development. i don't plan on stopping!<br><br>thanks for stopping by my little corner of the internet!</p>
           <br>
           <br>
             <img class="header" src="images/shortLine.png" autofocus>
           <br>
-            <p style="width:600px;margin: 0 auto" text-align="center">fin deevy &#169;2024</p>
+            <p style="width:600px;margin: 0 auto" text-align="center">fin deevy &#169;2025</p>
             <a href="https://en.wikipedia.org/wiki/Worm"><img class="worm "style="margin: 0 auto" src="images/worm.png" onmouseover="this.src='images/wormG.png';" onmouseout="this.src='images/worm.png';"></a>
     </div>
   </body>
