--- a/yappin.html
+++ b/yappin.html
@@ -22,6 +22,10 @@
         </p>
             <img class="header" src="images/line.png" autofocus>
             <h1>yappin'</h1>
+	    <b><a href="essays/20250123.html">"the circus clown and the ghost"</a></b>
+            <p>when i was in high school, i would spend every day sitting...</p>
+          <br>
+          <br>
             <b><a href="essays/20241017.html">"god's vegetal state"</a></b>
             <p>i felt that i had been happy and that i was happy again...</p>
           <br>
@@ -35,7 +39,7 @@
         <br>
         <br>
             <img class="header" src="images/shortLine.png" autofocus>
-            <p style="width:600px;margin: 0 auto" text-align="center">fin deevy &#169;2024</p>
+            <p style="width:600px;margin: 0 auto" text-align="center">fin deevy &#169;2025</p>
             <a href="https://en.wikipedia.org/wiki/Worm"><img class="worm "style="margin: 0 auto" src="images/worm.png" onmouseover="this.src='images/wormG.png';" onmouseout="this.src='images/worm.png';"></a>
     </div>
   </body>
