--- a/essays/20240927.html
+++ b/essays/20240927.html
@@ -10,7 +10,7 @@
   <body style="font-family: monospace, monospace;width:1000px;margin-left:auto ;margin-right:auto;margin:0 auto;background-color: #0e071b; color: #0e071b;" align="center">
     <div class = "tow">
       <div align="center">
-        <a href="index.html"><img class="header" src="../images/banner.png" autofocus></a>
+        <a href="../index.html"><img class="header" src="../images/banner.png" autofocus></a>
         <img class="header" src="../images/line.png" autofocus>
         <p style="width:1000px; margin: 0 auto" text-align="center">
           <a class="float" href="../aNote.html"><img src="../images/aNoteButton.png" onmouseover="this.src='../images/aNoteButtonG.png';" onmouseout="this.src='../images/aNoteButton.png';"></a>
@@ -33,7 +33,7 @@
             </div>
             <img class="header" src="../images/shortLine.png" autofocus>
           <br>
-            <p style="width:600px;margin: 0 auto" text-align="center">fin deevy &#169;2024</p>
+            <p style="width:600px;margin: 0 auto" text-align="center">fin deevy &#169;2025</p>
             <a href="../https://en.wikipedia.org/wiki/Worm"><img class="worm "style="margin: 0 auto" src="../images/worm.png" onmouseover="this.src='../images/wormG.png';" onmouseout="this.src='../images/worm.png';"></a>
     </div>
   </body>
