--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="favicon2.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon2.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <style>.scrolling-container { width: 100%; overflow: hidden; white-space: nowrap; } .scrolling-text { display: inline-block; animation: scroll-left 15s linear infinite; } @keyframes scroll-left { 0% { transform: translateX(100%); } 100% { transform: translateX(-100%); } }</style>
   </head>
   <body align="center">
     <div class = "tow">
@@ -21,9 +22,11 @@
           <a class="float" href="about.html"><img src="images/aboutButton.png" onmouseover="this.src='images/aboutButtonG.png';" onmouseout="this.src='images/aboutButton.png';"></a>
         </p>
             <img class="header" src="images/line.png" autofocus>
-          <br>
-          <br>
-          <a href="https://store.steampowered.com/app/2665180/ALEPH/"><img align="left"class="float" src="images/aleph.png" onmouseover="this.src='images/alephG.png';" onmouseout="this.src='images/aleph.png';" autofocus></a>
+	    <div class="scrolling-container"><h2 class="scrolling-text">hi, i'm working on a new game. i will not tell you details right now...</h2></div>
+	    <img class="header" src="images/line.png" autofocus>
+	  <br>
+	  <br>
+	  <a href="https://store.steampowered.com/app/2665180/ALEPH/"><img align="left"class="float" src="images/aleph.png" onmouseover="this.src='images/alephG.png';" onmouseout="this.src='images/aleph.png';" autofocus></a>
             <h1>aleph</h1>
               <p>release date: august 14th, 2024</p>
               <p>platforms: linux, windows</p>
@@ -54,7 +57,6 @@
           <img class="header" src="images/shortLine.png" autofocus>
           <br>
             <p style="width:600px;margin: 0 auto" text-align="center">fin deevy &#169;2025</p>
-            <a href="https://en.wikipedia.org/wiki/Worm"><img class="worm "style="margin: 0 auto" src="images/worm.png" onmouseover="this.src='images/wormG.png';" onmouseout="this.src='images/worm.png';"></a>
     </div>
   </body>
 </html>
