--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <a class="float" href="about.html"><img src="images/aboutButton.png" onmouseover="this.src='images/aboutButtonG.png';" onmouseout="this.src='images/aboutButton.png';"></a>
         </p>
             <img class="header" src="images/line.png" autofocus>
-	    <div class="scrolling-container"><h2 class="scrolling-text">hi, i'm working on a new game. i will not tell you details right now...</h2></div>
+	    <div class="scrolling-container"><h2 class="scrolling-text">a new experience is brewing; one of flesh and silicon...</h2></div>
 	    <img class="header" src="images/line.png" autofocus>
 	  <br>
 	  <br>
