--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
             <img class="header" src="images/line.png" autofocus>
           <br>
             <h1>hi.</h1>
-            <p align="left" style="margin-left: 14px; margin-right: 120px">my name is fin and i've been making indie games in some form or another for seven(ish) years! i'm currently in university studying computer science. over the years i've delved into everything from politics, to skateboarding, to not eating meat, to art, to game development. i don't plan on stopping!<br><br>thanks for stopping by my little corner of the internet!</p>
+            <p align="left" style="margin-left: 14px; margin-right: 120px">my name is fin and i've been making indie games in some form or another for eight(ish) years! i'm currently in university studying computer science. over the years i've delved into everything from politics, to skateboarding, to not eating meat, to art, to game development, to not-shutting-up. i don't plan on stopping!<br><br>thanks for stopping by my little corner of the internet!</p>
           <br>
           <br>
             <img class="header" src="images/shortLine.png" autofocus>
